--- a/pages/AddField/index.html
+++ b/pages/AddField/index.html
@@ -19,11 +19,12 @@
     <div class="add-box">
         <form class="addForm" id="form1" name="form1" action="">
             <input type="hidden" name="comid" value="" id="companyId">
+            <input type="hidden" name="id" value="" id="fieldId">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tbody>
                     <tr>
                         <td align="center">字段名称</td>
-                        <td><input type="text" class="form-control" name="fieldname" placeholder="请输入字段名称" datatype="*"
+                        <td><input type="text" class="form-control" id="fieldName" name="fieldname" placeholder="请输入字段名称" datatype="*"
                                 nullmsg="请输入字段名称"></td>
                     </tr>
 
