--- a/pages/PersonnelManage/index.html
+++ b/pages/PersonnelManage/index.html
@@ -19,7 +19,7 @@
 </div>
 <div>
 <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/console/userDelete','GET','id')"><i class="fas fa-trash-alt"></i> 删除</button>
-<button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('../AddPersonnel/index.html')"><i class="fas fa-edit"></i> 修改</button>
+<button type="button" class="btn btn-info navbar-btn listButton" id="edit-button"><i class="fas fa-edit"></i> 修改</button>
 <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddPersonnel/index.html')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
 <div class="navbar-form navbar-right listSearch">
 <div class="form-group">
