--- a/pages/CustomerDetail/index.html
+++ b/pages/CustomerDetail/index.html
@@ -18,7 +18,25 @@
 			border: 2px solid #fff;
 			margin: 10px 5px;
 		}
+		.box1{
+			width: 100%;
+			border-bottom:1px solid #e6e6e6;
+		}
+		.box2{
+			width: 100%;
+		}
 
+		.inlineDiv{
+			width: 20%;
+			text-align: center;
+			border-right:1px solid #e6e6e6;
+			display: inline-block;
+			font-weight: 900;
+		}
+		.divContent{
+			margin-left: 1%;
+			display: inline-block;
+		}
         .contactTd {
 			border-bottom: 0 !important;
     		border-right: 0 !important;
@@ -34,6 +52,11 @@
 			border: 1px solid #e6e6e6;
 			border-left: 0;
 			border-top: 0;
+		}
+		.tdStyle1{
+			font-weight: 900 !important;
+			width: 10% !important;
+			text-align: center !important;
 		}
 		.tdStyle {
 			width: 30% !important;
@@ -111,22 +134,18 @@
 					<td align="center">相关讨论组</td>
 					<td class="contactTd">
 						<table width="100%" cellspacing="0" cellpadding="0">
-							<thead class="thStyle">
-								<tr>
-									<th>名称</th>
-									<th>组内人数</th>
-									<th>成员</th>
-								</tr>
-							</thead>
 							<tbody>
 								<tr>
-									<td class="tdStyle">1</td>
+									<td class="tdStyle1" >名称</td>
 									<td class="tdStyle">209</td>
-									<td class="tdStyle">29</td>
-									<td class="tdStyle" style="border-bottom:0;">
-										<div>1111</div>
-										<div>2222</div>
-									</td>
+								</tr>
+								<tr>
+									<td class="tdStyle1">组内人数</td>
+									<td class="tdStyle">11</td>
+								</tr>
+								<tr>
+									<td class="tdStyle1">成员</td>
+									<td class="tdStyle">111,222,333,4,455,5565</td>
 								</tr>
 							</tbody>
 						</table>
@@ -134,18 +153,18 @@
 					<td align="center">信息来源</td>
 					<td class="contactTd">
 						<table width="100%" cellspacing="0" cellpadding="0">
-							<thead class="thStyle">
-								<tr>
-									<th>用户名称</th>
-									<th>用户ID</th>
-									<th>备注</th>
-								</tr>
-							</thead>
 							<tbody>
 								<tr>
-									<td class="tdStyle">1</td>
+									<td class="tdStyle1">用户名称</td>
 									<td class="tdStyle">209</td>
-									<td class="tdStyle">李晨</td>
+								</tr>
+								<tr>
+									<td class="tdStyle1">用户ID</td>
+									<td class="tdStyle">209</td>
+								</tr>
+								<tr>
+									<td class="tdStyle1">备注</td>
+									<td class="tdStyle">209</td>
 								</tr>
 							</tbody>
 						</table>
