--- a/pages/AddUser/index.html
+++ b/pages/AddUser/index.html
@@ -99,6 +99,25 @@
                         <td align="center">地址</td>
                         <td><input type="text" name="address" id="user_address" class="form-control"  placeholder="请输入地址"></td>
                     </tr> -->
+
+                     <tr>
+                        <td align="center">角色</td>
+                        <td>
+                        <!-- <input type="text" name="roleid" id="roleid" value="1" hidden> -->
+                        <select class="form-control" name="roleId" id="roleId"  placeholder="请选择角色" value='' nullmsg="请选择角色">
+                            <option value="" selected>---请选择角色---</option>
+                        </select>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td align="center">用户身份</td>
+                        <td>
+                        <select class="form-control" name="userstate" id="userstate"  placeholder="请选择用户身份" value='' nullmsg="请选择用户身份">
+                            <option value="" selected>---请选择用户身份---</option>
+                        </select>
+                        </td>
+                    </tr>
                     
                     <tr>
                         <td>&nbsp;</td>
