--- a/pages/EditBusiness/index.html
+++ b/pages/EditBusiness/index.html
@@ -157,9 +157,9 @@
                 </td>
               </tr>
               <tr>
-                <td class="contactTd" colspan="2">
+                <td class="contactTd linksTd" colspan="2">
                   <div style="padding-left: 6px;margin-bottom: -10px;border-top: 1px solid #e6e6e6;">*请选择下列联系人进行修改:</div>
-                  <div style="height:200px;overflow-x:auto;padding: 10px;">
+                  <div style="height:200px;overflow-x:auto;padding: 10px;" class="customerListDiv">
                     <table width="80%" style="height:200px;overflow-x:auto;text-align: center;" cellspacing="0" cellpadding="0">
                       <input type="text" id="linksKeyOld" hidden>
                       <input type="text" id="linksKeyNew" hidden>
@@ -190,7 +190,7 @@
           </tr>
           <tr>
             <td align="center">负责人</td>
-            <td class="contactTd"  colspan="3">
+            <td class="contactTd principalsTd"  colspan="3">
               <div id="PrincipalsList">
                 <div class="contact">
                 </div>
@@ -198,7 +198,7 @@
               <div style="padding-left: 6px;margin-bottom: -10px;border-top: 1px solid #e6e6e6;">*请选择下列负责人进行修改:</div>
               <!-- <div class="form-control getPCD" id="PrincipalsSelect" value="" datatype="*"  style="overflow-x:auto;width:36%;height: 50px; margin-left: 6px;" >
               </div> -->
-              <div style="height:200px;overflow-x:auto;padding: 10px;">
+              <div style="height:200px;overflow-x:auto;padding: 10px;display: none;" class="userListDiv">
                 <table width="80%" style="height:200px;overflow-x:auto;" cellspacing="0" cellpadding="0">
                   <thead style="border: 1px solid #e6e6e6;">
                     <tr>
