--- a/pages/CompanyList/index.html
+++ b/pages/CompanyList/index.html
@@ -68,7 +68,7 @@
                     <th>开户时间</th>
                     <th>截止时间</th>
                     <!-- <th>后台账号</th> -->
-                    <th>最近登录时间</th>
+                    <!-- <th>最近登录时间</th> -->
                     <th>操作</th>
                 </tr>
             </thead>
