--- a/pages/AddUser/index.html
+++ b/pages/AddUser/index.html
@@ -36,7 +36,7 @@
 
                     <tr>
                         <td align="center">密码</td>
-                        <td><input type="password" name="passwd" id="user_passwd" class="form-control" datatype="/^(?![0-9]+$)(?![a-zA-Z]+$)[0-9A-Za-z]{6,16}$/" errormsg="密码由6~16位之间数字或字母组成" nullmsg="请输入密码" placeholder="请输入密码"></td>
+                        <td><input type="password" name="passwd" id="user_passwd" class="form-control" datatype="/^(?![0-9]+$)(?![a-zA-Z]+$)[0-9A-Za-z]|[*]{6,16}$/" errormsg="密码由6~16位之间数字或字母组成" nullmsg="请输入密码" placeholder="请输入密码"></td>
                     </tr>
 
                     <!-- <tr>
