--- a/pages/AddRole/index.html
+++ b/pages/AddRole/index.html
@@ -20,6 +20,7 @@
     <div class="add-box">
         <form class="addForm" id="form1" name="form1" action="">
             <input type="hidden" name="id" value="" id="roleId" />
+            <input type="hidden" name="isSuperAdmin" value="1"/>
             <table width="100%" cellspacing="0" cellpadding="0">
                 <tbody>
                     <tr>
@@ -27,7 +28,7 @@
                         <td colspan="7"><input type="text" name="roleName" value="" class="form-control" id="roleName"
                                 datatype="*1-50" errormsg="最多填写50个字符串" nullmsg="请输入角色名称" placeholder="请输入角色名称"></td>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                         <td align="center">管理员权限</td>
                         <td colspan="7">
                             <select class="form-control" name="isSuperAdmin" id="isSuperAdmin">
@@ -36,7 +37,7 @@
                                 <option value="2">普通管理员</option>
                             </select>
                         </td>
-                    </tr>
+                    </tr> -->
                     <tr id="menuList">
                         <td align="center">请选择角色权限</td>
                         <input type="hidden" id="roles" name="menuIds" value="" />
