--- a/pages/CompanyList/index.html
+++ b/pages/CompanyList/index.html
@@ -20,9 +20,9 @@
             <span class="navbar-brand">公司管理</span>
         </div>
         <div>
-            <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteCompany','GET','companyId')"><i
+            <!-- <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteCompany','GET','companyId')"><i
                     class="fas fa-trash-alt"></i>
-                删除</button>
+                删除</button> -->
             <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('../AddCompany/index.html')"><i
                     class="fas fa-edit"></i>
                 修改</button>
