--- a/pages/index.html
+++ b/pages/index.html
@@ -80,7 +80,7 @@
                             str +=
                                 `
                             <li data-res="${index}">
-                                <a class="com-TopMenu" data-id="${val.id}" href="javascript:void(0)">
+                                <a class="com-TopMenu" data-id="${val.id}" data-child="${val.childMenus.length}" href="javascript:void(0)">
                                     <i class="fa"></i>
                                     ${val.menuName}
                                 </a>
