--- a/pages/UserList/index.html
+++ b/pages/UserList/index.html
@@ -17,7 +17,7 @@
 <span class="navbar-brand">用户信息管理</span>
 </div>
 <div>
-<button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteUser','GET','userId')"><i class="fas fa-trash-alt"></i> 删除</button>
+<!-- <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteUser','GET','userId')"><i class="fas fa-trash-alt"></i> 删除</button> -->
 <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('../AddUser/index.html')" id="editBtn"><i class="fas fa-edit"></i>修改</button>
 <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddUser/index.html')" id="addBtn"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
 <button type="button" class="btn btn-primary navbar-btn listButton" id="export"><i class="fa fa-sign-in" aria-hidden="true"></i> 导出Excel</button>
