--- a/pages/BusinessList/index.html
+++ b/pages/BusinessList/index.html
@@ -22,7 +22,8 @@
 <span class="navbar-brand">查看商机列表</span>
 </div>
 <div>
-<button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteOpportunity','GET','opportunityId')"><i class="fas fa-trash-alt"></i> 删除</button>
+<button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteOpportunitys','GET','ids')"><i class="fas fa-trash-alt"></i> 删除</button>
+<!-- <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteOpportunity','GET','opportunityId')"><i class="fas fa-trash-alt"></i> 删除</button> -->
 <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('../EditBusiness/index.html')"> <i class="fas fa-edit"></i>
   修改</button>
 <!-- <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('addNews')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button> -->
