--- a/pages/CustomerList/index.html
+++ b/pages/CustomerList/index.html
@@ -17,8 +17,10 @@
 			<span class="navbar-brand">客户信息管理</span>
 		</div>
 		<div>
-			<button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/customerDel','GET','Id')"><i
+			<button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/delCus','GET','ids')"><i
 				 class="fas fa-trash-alt"></i> 删除</button>
+			<!-- <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/customerDel','GET','Id')"><i
+				 class="fas fa-trash-alt"></i> 删除</button> -->
 			<form class="navbar-form navbar-right listSearch" role="search">
 				<div class="form-group">
 					<input type="text" class="form-control" id="IdKeyWord" placeholder="输入ID进行搜索" />
