--- a/pages/FieldManage/index.html
+++ b/pages/FieldManage/index.html
@@ -15,8 +15,10 @@
             <span class="navbar-brand">弹性域字段管理</span>
         </div>
         <div>
-            <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/fieldNameEdit','GET','id','1')"><i
+            <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteFieldNames','GET','ids','1')"><i
                     class="fas fa-trash-alt"></i>删除</button>
+            <!-- <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/fieldNameEdit','GET','id','1')"><i
+                    class="fas fa-trash-alt"></i>删除</button> -->
             <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('../AddField/index.html')"><i
                     class="fas fa-edit"></i>
                 修改</button>
