--- a/pages/BusinessList/index.html
+++ b/pages/BusinessList/index.html
@@ -29,7 +29,7 @@
 <!-- <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('addNews')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button> -->
 <div class="navbar-form navbar-right listSearch">
 <div class="form-group">
-  <input name="phone" type="text" class="form-control" style="width:100px;" id="search_companyName" placeholder="公司名称">
+  <input name="companyName" type="text" class="form-control" style="width:100px;" id="search_companyName" placeholder="公司名称">
 </div>
 <div class="form-group">
   <input name="Id" type="text" class="form-control" style="width:75px;" id="search_linkMan" placeholder="联系人">
