--- a/pages/UserList/index.html
+++ b/pages/UserList/index.html
@@ -32,6 +32,12 @@
 <div class="form-group">
     <input name="Id" type="text" class="form-control" style="width:130px;" id="search_Id" placeholder="输入Id进行搜索">
 </div>
+<!-- <div class="form-group">
+    <input name="compName" type="text" class="form-control" style="width:170px;" id="search_compName" placeholder="输入公司名称进行搜索">
+</div> -->
+<select class="form-control" name="compName" id="search_compName">
+    <option value="" selected="">选择公司进行搜索</option>
+</select>
 <button class="btn btn-primary" id="search_btn"><i class="fa fa-search" aria-hidden="true"></i> 搜索</button>
 </div>
 <div class="navbar-form navbar-right listSearch">
