--- a/pages/FieldManage/index.html
+++ b/pages/FieldManage/index.html
@@ -34,6 +34,7 @@
                     <th>选择</th>
                     <th>序号</th>
                     <th>字段名称</th>
+                    <th>公司名称</th>
                     <th>是否启用</th>
                 </tr>
             </thead>
