--- a/pages/StageManage/index.html
+++ b/pages/StageManage/index.html
@@ -37,6 +37,7 @@
                     <th>选择</th>
                     <th>序号</th>
                     <th>阶段名称</th>
+                    <th>公司名称</th>
                     <th>是否启用</th>
                 </tr>
             </thead>
