--- a/pages/UserList/index.html
+++ b/pages/UserList/index.html
@@ -20,7 +20,7 @@
 <!-- <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteUser','GET','userId')"><i class="fas fa-trash-alt"></i> 删除</button> -->
 <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('../AddUser/index.html')" id="editBtn"><i class="fas fa-edit"></i>修改</button>
 <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddUser/index.html')" id="addBtn"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
-<button type="button" class="btn btn-primary navbar-btn listButton" id="export"><i class="fa fa-sign-in" aria-hidden="true"></i> 导出Excel</button>
+<button type="button" class="btn btn-primary navbar-btn listButton" id="export"><i class="fa fa-sign-in-alt" aria-hidden="true"></i> 导出Excel</button>
 <button type="button" class="btn btn-info navbar-btn listButton" id="allChecked"><i class="fa fa-sellcast" aria-hidden="true"></i><span id="changeTxt"> 全选</span></button>
 <div class="navbar-form navbar-right listSearch">
 <div class="form-group">
@@ -66,11 +66,12 @@
 <th>客户数量</th>
 <th>商机数量</th>
 <th>公司</th>
-<th style="display:none;">讨论组</th>
-<th style="display:none;">分组</th>
-<th style="display:none;">标签</th>
-<!-- <th>密码</th> -->
-<th>企业搜索历史</th>
+<th>角色</th>
+<!-- <th>讨论组</th>
+<th>分组</th>
+<th>标签</th>
+<th>密码</th>
+<th>企业搜索历史</th> -->
 <th>用户总数</th>
 <th>操作</th>
 </tr>
