--- a/pages/AddField/index.html
+++ b/pages/AddField/index.html
@@ -27,7 +27,14 @@
                         <td><input type="text" class="form-control" id="fieldName" name="fieldname" placeholder="请输入字段名称" datatype="*"
                                 nullmsg="请输入字段名称"></td>
                     </tr>
-
+                    <tr id="platformCan" style="display:none;">
+                        <td align="center">所属公司</td>
+                        <td>
+                            <select class="form-control" name="comId" id="companySelect">
+                                <option value=""></option>
+                            </select>
+                        </td>
+                    </tr>
                     <tr>
                         <td>&nbsp;</td>
                         <td>
