--- a/pages/CustomerList/index.html
+++ b/pages/CustomerList/index.html
@@ -35,8 +35,8 @@
 			</form>
 			<form class="navbar-form navbar-right listSearch" role="search">
 				<div class="form-group">
-					<input type="text" id="openTime" class="form-control jcDate form_datetime" placeholder="选择开户时间" />
-					<input type="text" id="overTime" class="form-control jcDate form_datetime" placeholder="选择截止时间" />
+					<input type="text" id="openTime" class="form-control jcDate form_datetime" placeholder="选择创建时间" />
+					<!-- <input type="text" id="overTime" class="form-control jcDate form_datetime" placeholder="选择截止时间" /> -->
 				</div>
 				<button type="button" id="selectBtn" class="btn btn-primary"><i class="fa fa-calendar-check" aria-hidden="true"></i>
 					筛选</button>
