--- a/pages/RoleManage/index.html
+++ b/pages/RoleManage/index.html
@@ -39,6 +39,7 @@
                     <th>选择</th>
                     <th>序号</th>
                     <th>名称</th>
+                    <th>所属身份</th>
                     <th>创建时间</th>
                     <th>当前使用此角色的人数</th>
                 </tr>
