--- a/pages/AddRole/index.html
+++ b/pages/AddRole/index.html
@@ -31,7 +31,7 @@
                     <tr>
                         <td align="center">用户身份</td>
                         <td colspan="7">
-                            <select class="form-control" name="userstate" id="userState">
+                            <select class="form-control" name="userstate" id="userState" style="color:#777;">
                                 <option value="">选择用户身份</option>
                                 <option value="1">平台管理员</option>
                                 <option value="2">公司管理员</option>
