--- a/pages/CustomerList/index.html
+++ b/pages/CustomerList/index.html
@@ -25,7 +25,7 @@
 				<div class="form-group">
 					<input type="text" class="form-control" id="IdKeyWord" placeholder="输入ID进行搜索" />
 					<input type="text" class="form-control" id="NameKeyWord" placeholder="输入姓名进行搜索" />
-					<select class="form-control" name="moduleType" id="companySelect">
+					<select class="form-control" name="moduleType" id="companySelect" style="display:none;">
 						<option value="" selected="">选择公司进行搜索</option>
 						<option value="">1</option>
 					</select>
