--- a/pages/UserList/index.html
+++ b/pages/UserList/index.html
@@ -19,7 +19,7 @@
 <div>
 <!-- <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteUser','GET','userId')"><i class="fas fa-trash-alt"></i> 删除</button> -->
 <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('../AddUser/index.html')" id="editBtn"><i class="fas fa-edit"></i>修改</button>
-<button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddUser/index.html')" id="addBtn"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
+<button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddUser/index.html')" id="addBtn" style="display:none;"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
 <button type="button" class="btn btn-primary navbar-btn listButton" id="export"><i class="fa fa-sign-in-alt" aria-hidden="true"></i> 导出Excel</button>
 <button type="button" class="btn btn-info navbar-btn listButton" id="allChecked"><i class="fa fa-sellcast" aria-hidden="true"></i><span id="changeTxt"> 全选</span></button>
 <div class="navbar-form navbar-right listSearch">
@@ -35,7 +35,7 @@
 <!-- <div class="form-group">
     <input name="compName" type="text" class="form-control" style="width:170px;" id="search_compName" placeholder="输入公司名称进行搜索">
 </div> -->
-<select class="form-control" name="compName" id="search_compName">
+<select class="form-control" name="compName" id="search_compName" style="display:none;">
     <option value="" selected="">选择公司进行搜索</option>
 </select>
 <button class="btn btn-primary" id="search_btn"><i class="fa fa-search" aria-hidden="true"></i> 搜索</button>
@@ -65,8 +65,8 @@
 <th>头像</th>
 <th>客户数量</th>
 <th>商机数量</th>
-<th>公司</th>
-<th>角色</th>
+<th>所属公司</th>
+<th>所属角色</th>
 <!-- <th>讨论组</th>
 <th>分组</th>
 <th>标签</th>
