--- a/pages/EditBusiness/index.html
+++ b/pages/EditBusiness/index.html
@@ -234,7 +234,7 @@
           <tr>
             <td>&nbsp;</td>
             <td colspan="3">
-              <button type="button" class="btn btn-success" id="back"><i class="fa fa-back" aria-hidden="true"></i> 完成</button>
+              <button type="button" class="btn btn-default" id="back"><i class="fa fa-times" aria-hidden="true"></i>返回</button>
             </td>
           </tr>
         </tbody>
