--- a/pages/AddUser/index.html
+++ b/pages/AddUser/index.html
@@ -104,10 +104,10 @@
                     
                     <tr>
                         <td>&nbsp;</td>
-                        <td>
+                        <td id="subTd">
                             <button type="submit" class="btn btn-success" id="saveButton"><i class="fa fa-check" aria-hidden="true"></i> <span id="changeTxt">添加</span></button>
-                            <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times"
-                                    aria-hidden="true"></i> 取消</button>
+                            <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
+                            <button type="button" class="btn btn-default" id="cancelButtonEdit" style="display:none;"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
                         </td>
                     </tr>
                 </tbody>
